--- a/HTML_And_CSS_Template_Three-main/index.html
+++ b/HTML_And_CSS_Template_Three-main/index.html
@@ -21,7 +21,7 @@
         <a href="#" class="logo">VIRTRIDERS</a>
         <ul class="main-nav">
           <li><a href="#">About</a></li>
-          <li><a href="#articles">Binomes</a></li>
+          <li><a href="#articles">binômes</a></li>
         </ul>
       </div>
     </div>
@@ -44,12 +44,12 @@
     <!-- End Landing -->
     <!-- Start Articles -->
     <div class="articles" id="articles">
-      <h2 class="main-title">Binomes</h2>
+      <h2 class="main-title">binômes</h2>
       <div class="container">
         <div class="box">
           <img src="imgs/2.png" alt="" />
           <div class="content">
-            <h3>Binome 1</h3>
+            <h3>binôme 1</h3>
             <p>BELABEIED Redouane</p>
             <p>KADOUMA Abdelhak</p>
           </div>
@@ -61,7 +61,7 @@
         <div class="box">
           <img src="imgs/3.png" alt="" />
           <div class="content">
-            <h3>Binome 2</h3>
+            <h3>binôme 2</h3>
             <p>Kribaa wassim</p>
             <p>KACEMI Souhib</p>
           </div>
@@ -73,7 +73,7 @@
         <div class="box">
           <img src="imgs/4.png" alt="" />
           <div class="content">
-            <h3>Binome 1</h3>
+            <h3>binôme 3</h3>
             <p>OULDMOHAMED Celina</p>
             <p>DEGHBOUDJ ABDERRAHMEN</p>
           </div>
