--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div class="login-content">
 			<form action="index.html">
 				<img src="img/LOGO 2.png">
-				<h2 class="title">Welcome to esi-kube</h2>
-				<a href="HTML_And_CSS_Template_Three-main/index.html"><input type="button" class="btn" value="Consultez les binome"></a>
+				<h2 class="title">Bienvenue à ESI-KUBE</h2>
+				<a href="HTML_And_CSS_Template_Three-main/index.html"><input type="button" class="btn" value="Consultez les binômes"></a>
             	<div>nous sommes l'equipe 7</div>
             </form>
         </div>
