--- a/HTML_And_CSS_Template_Three-main/index.html
+++ b/HTML_And_CSS_Template_Three-main/index.html
@@ -30,8 +30,8 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h1>Welcome To ESI-KUBE</h1>
-          <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
+          <h1>Bienvenue à ESI-KUBE</h1>
+          <p>cette platform est crée par l'equipe 7</p>
         </div>
         <div class="image">
           <img src="imgs/LOGO 2.png" alt="" />
