--- a/HTML_And_CSS_Template_Three-main/index.html
+++ b/HTML_And_CSS_Template_Three-main/index.html
@@ -54,7 +54,7 @@
             <p>KADOUMA Abdelhak</p>
           </div>
           <div class="info">
-            <a href="http://192.168.192.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in">Acceder a l'application</a>
+            <a href="redirect.html"  onclick="window.open('http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in');return true;">Acceder a l'application</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -66,7 +66,7 @@
             <p>KACEMI Souhib</p>
           </div>
           <div class="info">
-            <a href="http://192.168.192.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in">Acceder a l'application</a>
+            <a href="http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in" target="_blank">Acceder a l'application</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -78,7 +78,7 @@
             <p>DEGHBOUDJ ABDERRAHMEN</p>
           </div>
           <div class="info">
-            <a href="http://192.168.192.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in">Acceder a l'application</a>
+            <a href="http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in" target="_blank">Acceder a l'application</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
