--- a/HTML_And_CSS_Template_Three-main/redirect.html
+++ b/HTML_And_CSS_Template_Three-main/redirect.html
@@ -11,14 +11,14 @@
 	<img class="wave" src="img/Untitled design.png">
 	<div class="container">
 		<div class="img">
-			<img src="img/esi-kube.png">
+			<img src="img/LOGO 2.png">
 		</div>
 		<div class="login-content">
 			<form action="index.html">
-				<img src="img/LOGO 2.png">
-				<h2 class="title">Bienvenue à ESI-KUBE</h2>
-				<a href="HTML_And_CSS_Template_Three-main/index.html"><input type="button" class="btn" value="Consultez les binômes"></a>
-            	<div>nous sommes l'equipe 7</div>
+				<img src="img/rstudio.png">
+				<h2 class="title">Bienvenue</h2>
+				<a href="http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/"><input type="button" class="btn" value="Rediriger vers Rstudio"></a>
+            	
             </form>
         </div>
     </div>
