--- a/redirect/S2rstudio1.html
+++ b/redirect/S2rstudio1.html
@@ -16,9 +16,10 @@
 		<div class="login-content">
 			<form action="index.html">
 				<img src="img/rstudio.png">
-				<h2 class="title">Bienvenue</h2>
-				<a href="http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/"><input type="button" class="btn" value="Rediriger vers Rstudio"></a>
-            	
+				<h2 class="title">Binôme 1</h2>
+				<h3>BELABIED & KADOUMA</h3>
+				<a href="http://192.168.104.199:8001/api/v1/namespaces/default/services/rstudio1:/proxy/"><input type="button" class="btn" value="Ouvrir Rstudio"></a>
+            	<a href="S2redirect1.html">Serveur inaccessible !?</a>
             </form>
         </div>
     </div>
