--- a/redirect/index.html
+++ b/redirect/index.html
@@ -20,8 +20,8 @@
       <div class="container">
         <a href="#" class="logo">VIRTRIDERS</a>
         <ul class="main-nav">
-          <li><a href="#">About</a></li>
-          <li><a href="#articles">binômes</a></li>
+          <li><a href="#">Qui sommes nous?</a></li>
+          <li><a href="#articles">Liste des binômes</a></li>
         </ul>
       </div>
     </div>
@@ -31,7 +31,10 @@
       <div class="container">
         <div class="text">
           <h1>Bienvenue à ESI-KUBE</h1>
-          <p>cette platform est crée par l'equipe 7</p>
+          <p>Cette platform est crée par l'équipe 7 constitué de : </p>
+          <p class="equipe">-BELABEIED Redouane &nbsp-KADOUMA Abdelhak </p>
+          <p class="equipe">-OULDMOHAMED Celina &nbsp-KACEMI Souhib </p>
+          <p class="equipe">-Kribaa wassim &nbsp-DEGHBOUDJ ABDERRAHMEN </p>
         </div>
         <div class="image">
           <img src="imgs/LOGO 2.png" alt="" />
@@ -54,7 +57,7 @@
             <p>KADOUMA Abdelhak</p>
           </div>
           <div class="info">
-            <a href="redirect.html"  onclick="window.open('http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in');return true;">Acceder a l'application</a>
+            <a href="rstudio1.html"  onclick="window.open('http://192.168.248.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in');return true;">Acceder a l'application</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -66,7 +69,7 @@
             <p>KACEMI Souhib</p>
           </div>
           <div class="info">
-            <a href="http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in" target="_blank">Acceder a l'application</a>
+            <a href="rstudio2.html"  onclick="window.open('http://192.168.248.57:8001/api/v1/namespaces/default/services/rstudio2:/proxy/auth-sign-in');return true;">Acceder a l'application</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -78,7 +81,7 @@
             <p>DEGHBOUDJ ABDERRAHMEN</p>
           </div>
           <div class="info">
-            <a href="http://192.168.48.57:8001/api/v1/namespaces/default/services/rstudio1:/proxy/auth-sign-in" target="_blank">Acceder a l'application</a>
+            <a href="rstudio3.html"  onclick="window.open('http://192.168.248.57:8001/api/v1/namespaces/default/services/rstudio3:/proxy/auth-sign-in');return true;">Acceder a l'application</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
