--- a/redirect/S2redirect3.html
+++ b/redirect/S2redirect3.html
@@ -6,21 +6,20 @@
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	 <!-- ====== icon ====== -->
-	 <link rel="shortcut icon" type="image/png" href="img/LOGO 1.png" />
 </head>
 <body>
 	<img class="wave" src="img/Untitled design.png">
 	<div class="container">
 		<div class="img">
-			<img src="img/esi-kube.png">
+			<img src="img/LOGO 2.png">
 		</div>
 		<div class="login-content">
 			<form action="index.html">
-				<img src="img/LOGO 2.png">
-				<h2 class="title">Bienvenue à ESI-KUBE</h2>
-				<a href="redirect/index.html" target="_blank"><input type="button" class="btn" value="Consultez les binômes"></a>
-            	<div>Nous sommes l'equipe 7</div>
+				<img src="img/rstudio.png">
+				<h2 class="title">Serveur en panne !?</h2>
+				<h3>si vous avez un probléme essayé avec le 1er serveur</h3>
+				<a href="rstudio3.html"  onclick="window.open('http://192.168.104.57:8001/api/v1/namespaces/default/services/rstudio3:/proxy/auth-sign-in');return true;"><input type="button" class="btn" value="Ouvrir Rstudio (Serveur 1)"></a>
+            	
             </form>
         </div>
     </div>
